--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
     <form>
         <h2>user information</h2>
         <label>username:
-            <input type="text" placeholder="Enter username">
+            <input type="text" placeholder="Enter Username">
 
         </label>
         <br></br>
