--- a/form2.html
+++ b/form2.html
@@ -23,7 +23,7 @@
 
         </label><br></br>
         <label>Phone No
-            <input type="text" placeholder="Phone">
+            <input type="Text" placeholder="Phone">
 
         </label>
         <br></br>   
