created my profile

--- a/application form.html
+++ b/application form.html
@@ -21,7 +21,7 @@
 
     
     <label>* Age:</label>
-    <input type="number" placeholder="Age" min="18" >
+    <input type="Number" placeholder="Age" min="18" >
     <br><br>
 
     
