--- a/first project.html
+++ b/first project.html
@@ -13,8 +13,8 @@
 <h2>Name : Abhay Pratap Singh</h2>
 <h2>Branch :CSE</h2>
 <h2>Roll no : 2400320100021</h2>
-<h2>Adm no : 2024b0101054</h2>
+<h2>Adm no : 2024B0101054</h2>
 <h2>Section : CSE 12</h2>
-<a href="https:\\aktu.ac.in\ " target="_blank">University : AKTU</a></center>
+<a href="https:\\aktu.ac.in\ " target="_blank">University : aktu</a></center>
 </body>
 </html>
