created application form

--- a/application form.html
+++ b/application form.html
@@ -28,7 +28,7 @@
     <label for="role">Which option best describes your current role?</label>
     <select id="role" name="role">
       <option value="student">Student</option>
-      <option value="employee">Employee</option>
+      <option value="Employee">Employee</option>
       <option value="freelancer">Freelancer</option>
       <option value="other">Other</option>
     </select>
