--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
         <br></br>
         <br> 
         <label>password:
-            <input type="text" placeholder="password">
+            <input type="text" placeholder="Password">
 
         </label>
         <h4>select course:</h4>
