--- a/form.html
+++ b/form.html
@@ -36,7 +36,7 @@
         </label>
         
     </br>
-    <textarea name="message" placeholder="enter your passage" rows="10" columns="10"></textarea>
+    <textarea name="message" placeholder="Enter your passage" rows="10" columns="10"></textarea>
     <br>
     <select name="colleges" >
         <option value="ABES">ABES</option>
