--- a/form.html
+++ b/form.html
@@ -41,7 +41,7 @@
     <select name="colleges" >
         <option value="ABES">ABES</option>
         <option value="IIT">IIT</option>
-        <option value="IIM">IIM</option>
+        <option value="IIM">NIT</option>
     </select>
     </form>
 
