created a file using semantic tags

--- a/semantic.html
+++ b/semantic.html
@@ -7,7 +7,7 @@
 </head>
 <body>
      <p>x<sup>3</sup>+x<sup>2</sup>+3</p>
-   <pre> <p>                      Abhay is a good boy but not a bad boy</p></pre>
+   <pre> <p>                      Abhay is a Good boy but not a bad boy</p></pre>
    <pre>home    about us    academics    contacts</pre>
    <footer>
     <h4>contact   us   at    @abes.ac.in</h4>
