--- a/table.html
+++ b/table.html
@@ -10,7 +10,7 @@
         <caption>my profile</caption>
         <tr>
             <th>S.No</th>
-            <th>qualifications</th>
+            <th>Qualifications</th>
             <th>university/board</th>
             <th>passing year</th>
             <th>division</th>
