--- a/table.html
+++ b/table.html
@@ -11,7 +11,7 @@
         <tr>
             <th>S.No</th>
             <th>Qualifications</th>
-            <th>University/board</th>
+            <th>University/Board</th>
             <th>passing year</th>
             <th>division</th>
         </tr>
