--- a/table.html
+++ b/table.html
@@ -12,7 +12,7 @@
             <th>S.No</th>
             <th>Qualifications</th>
             <th>University/Board</th>
-            <th>Passing year</th>
+            <th>Passing Year</th>
             <th>division</th>
         </tr>
         <tr>
