--- a/table.html
+++ b/table.html
@@ -13,7 +13,7 @@
             <th>Qualifications</th>
             <th>University/Board</th>
             <th>Passing Year</th>
-            <th>division</th>
+            <th>Division</th>
         </tr>
         <tr>
             <td>1</td>
