--- a/table.html
+++ b/table.html
@@ -17,7 +17,7 @@
         </tr>
         <tr>
             <td>1</td>
-            <td>12 pass</td>
+            <td>12 Pass</td>
             <td>CBSE</td>
             <td>2023-25</td>
             <td>93%</td>
