--- a/table.html
+++ b/table.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <table border="">
-        <caption>My profile</caption>
+        <caption>My Profile</caption>
         <tr>
             <th>S.No</th>
             <th>Qualifications</th>
