created a clickable image

--- a/clickable image.html
+++ b/clickable image.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Clickable image</title>
+    <title> Clickable Image</title>
 </head>
 <body>
     <a href ="http://abes.ac.in"target="_blank" rel=""noopener noreferrer>
