--- a/FDS page.html
+++ b/FDS page.html
@@ -1,38 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <title>CSS Styling Approaches</title>
-  
-  <!-- Internal CSS -->
-  <style>
-    .internal-style {
-      color: green;
-      font-size: 20px;
-    }
-  </style>
-  
-  <!-- Link to external CSS -->
-  <link rel="stylesheet" href="external.css" />
+    <title>Colored Paragraph</title>
 </head>
 <body>
-  
-  <!-- Inline CSS -->
-  <p style="color: blue; font-weight: bold;">
-    This is inline styled text.
-  </p>
-  
-  <!-- Internal CSS -->
-  <p class="internal-style">
-    This is internally styled text.
-  </p>
-  
-  <!-- External CSS -->
-  <p class="external-style">
-    This is externally styled text.
-  </p>
-  
+    <p>
+        <span style="color: red;">This text is red, </span>
+        <span style="color: blue;">this text is blue, </span>
+        <span style="color: green;">and this text is green.</span>
+    </p>
 </body>
-</html>
+</html
