--- a/colored heading.html
+++ b/colored heading.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Red Headings</title>
   <style>
-    .heading {
+    .head {
       color: red;
     }
   </style>
 </head>
 <body>
 
-  <h1 class="heading">This is Heading 1</h1>
-  <h2 class="heading">This is Heading 2</h2>
-  <h3 class="heading">This is Heading 3</h3>
+  <h1 class="head">This is Heading 1</h1>
+  <h2 class="head">This is Heading 2</h2>
+  <h3 class="head">This is Heading 3</h3>
 
 </body>
 </html>
