create a colored paragraph

--- a/colored paragraph.html
+++ b/colored paragraph.html
@@ -7,7 +7,7 @@
     <p>
         <span style="color: red;">This text is red, </span>
         <span style="color: blue;">this text is blue, </span>
-        <span style="color: green;">and this text is green.</span>
+        <span style="color: green;">and this text is green</span>
     </p>
 </body>
 </html>
