--- a/form2.html
+++ b/form2.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <form>
-        <h2>user information</h2>
-        <label>subject
+        <h2>User information</h2>
+        <label>Subject
             <input type="text" placeholder="Subject">
 
         </label>
