Use filter properties

--- a/filter_properties.html
+++ b/filter_properties.html
@@ -4,7 +4,7 @@
   <title>Simple Filter</title>
   <style>
     body {
-      text-align: center; /* Center all inline elements like img and select */
+      text-align: center; 
       margin-top: 50px;
       font-family: Arial, sans-serif;
     }
