--- a/practical1-Q-1.html
+++ b/practical1-Q-1.html
@@ -36,7 +36,7 @@
     </tr>
     <tr>
       <td>101</td>
-      <td>Abhay</td>
+      <td>Abhinav</td>
       <td>BCA</td>
       <td>85</td>
     </tr>
