--- a/practical1-Q-1.html
+++ b/practical1-Q-1.html
@@ -37,19 +37,19 @@
     <tr>
       <td>10</td>
       <td>Abhinav</td>
-      <td>Bba</td>
+      <td>BBA</td>
       <td>90</td>
     </tr>
     <tr>
       <td>11</td>
       <td>Riya</td>
-      <td>Bca</td>
+      <td>BCA</td>
       <td>80</td>
     </tr>
     <tr>
       <td>12</td>
       <td>Arjun</td>
-      <td>Btech</td>
+      <td>BTech</td>
       <td>80</td>
     </tr>
   </table>
