--- a/practical1-Q-1.html
+++ b/practical1-Q-1.html
@@ -36,19 +36,19 @@
     </tr>
     <tr>
       <td>10</td>
-      <td>Abhinav</td>
+      <td>Abhay</td>
       <td>BBA</td>
       <td>90</td>
     </tr>
     <tr>
       <td>11</td>
-      <td>Riya</td>
+      <td>Payal</td>
       <td>BCA</td>
       <td>80</td>
     </tr>
     <tr>
       <td>12</td>
-      <td>Arjun</td>
+      <td>Anuj</td>
       <td>BTech</td>
       <td>80</td>
     </tr>
