--- a/practical1-Q-1.html
+++ b/practical1-Q-1.html
@@ -29,7 +29,7 @@
   <h2 style="text-align:center;">Student Details</h2>
   <table>
     <tr>
-      <th>Roll No</th>
+      <th>Roll.No</th>
       <th>Name</th>
       <th>Course</th>
       <th>Marks</th>
