--- a/registration_form.html
+++ b/registration_form.html
@@ -66,7 +66,7 @@
     <label>Email</label>
     <input type="email" name="email" required>
 
-    <label>Phone Number:</label>
+    <label>Phone Number</label>
     <input type="text" name="phone" maxlength="10" required>
 
     <label>Gender:</label>
