--- a/registration_form.html
+++ b/registration_form.html
@@ -60,7 +60,7 @@
     <label>Name:</label>
     <input type="text" name="name" required>
 
-    <label>Password</label>
+    <label>Password:</label>
     <input type="password" name="password" required>
 
     <label>Email</label>
