create a registration form

--- a/registration_form.html
+++ b/registration_form.html
@@ -69,7 +69,7 @@
     <label>Phone Number:</label>
     <input type="text" name="phone" maxlength="10" required>
 
-    <label>Gender</label>
+    <label>Gender:</label>
     <input type="radio" name="gender" value="Male"> Male
     <input type="radio" name="gender" value="Female"> Female
 
