--- a/registration_form.html
+++ b/registration_form.html
@@ -73,7 +73,7 @@
     <input type="radio" name="gender" value="Male"> Male
     <input type="radio" name="gender" value="Female"> Female
 
-    <label>Date of Birth</label>
+    <label>Date of Birth:</label>
     <select>
       <option>Date</option>
       <option>1</option>
