create a registration form

--- a/registration_form.html
+++ b/registration_form.html
@@ -93,7 +93,7 @@
       <option>2007</option>
     </select>
 
-    <label>Languages Known</label>
+    <label>Languages Known:</label>
     <input type="checkbox" name="lang" value="English"> English
     <input type="checkbox" name="lang" value="Hindi"> Hindi
     <input type="checkbox" name="lang" value="Telugu"> Telugu
