create a registration form

--- a/registration_form.html
+++ b/registration_form.html
@@ -99,7 +99,7 @@
     <input type="checkbox" name="lang" value="Telugu"> Telugu
     <input type="checkbox" name="lang" value="Tamil"> Tamil
 
-    <label>Address:</label>
+    <label>Address</label>
     <textarea rows="3"></textarea>
 
     <br>
