--- a/registration_form.html
+++ b/registration_form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Registration Form</title>
+  <title> Form</title>
   <style>
     body {
       font-family: Arial;
