--- a/registration_form.html
+++ b/registration_form.html
@@ -57,7 +57,7 @@
 <body>
   <h2>Registration Form</h2>
   <form>
-    <label>Name:</label>
+    <label>Name-</label>
     <input type="text" name="name" required>
 
     <label>Password:</label>
