create a registration form

--- a/registration_form.html
+++ b/registration_form.html
@@ -63,7 +63,7 @@
     <label>Password-</label>
     <input type="password" name="password" required>
 
-    <label>Email:</label>
+    <label>Email-</label>
     <input type="email" name="email" required>
 
     <label>Phone Number:</label>
