create a registration form

--- a/registration_form.html
+++ b/registration_form.html
@@ -57,23 +57,23 @@
 <body>
   <h2>Registration Form</h2>
   <form>
-    <label>Name-</label>
+    <label>Name:</label>
     <input type="text" name="name" required>
 
-    <label>Password-</label>
+    <label>Password:</label>
     <input type="password" name="password" required>
 
-    <label>Email-</label>
+    <label>Email:</label>
     <input type="email" name="email" required>
 
-    <label>Phone Number-</label>
+    <label>Phone Number:</label>
     <input type="text" name="phone" maxlength="10" required>
 
-    <label>Gender-</label>
+    <label>Gender:</label>
     <input type="radio" name="gender" value="Male"> Male
     <input type="radio" name="gender" value="Female"> Female
 
-    <label>Date of Birth-</label>
+    <label>Date of Birth:</label>
     <select>
       <option>Date</option>
       <option>1</option>
